trying to fix this with align items

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -38,6 +38,7 @@ img {
 
 .nav > ul > li {
     justify-content: space-around;
+    align-items: center;
 }
 
 @media all and (max-width: 980px) {
